force-app/main/default/objects/EstimateLog__c/EstimateLog__c.object-meta.xml
<CustomObject>
    <label>見積履歴</label>
    <nameField>
        <displayFormat>A-{0000000}</displayFormat>
        <label>見積履歴名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>