force-app/main/default/objects/EstimateLog__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>カテゴリ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>初回見積</fullName>
            </value>
            <value>
                <fullName>再見積</fullName>
            </value>
            <value>
                <fullName>追加見積①</fullName>
            </value>
            <value>
                <fullName>追加見積②</fullName>
            </value>
            <value>
                <fullName>追加見積③</fullName>
            </value>
            <value>
                <fullName>追加見積④</fullName>
            </value>
            <value>
                <fullName>追加見積⑤</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>