force-app/main/default/objects/EstimateLog__c/fields/EstimatedProfitAmount__c.field-meta.xml
<CustomField>
    <fullName>EstimatedProfitAmount__c</fullName>
    <formula>ROUND(mitsumoririekiritsu__c  *  amount__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>見積粗利額（千円）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>