force-app/main/default/objects/EstimateLog__c/fields/Estimatememo__c.field-meta.xml
<CustomField>
    <fullName>Estimatememo__c</fullName>
    <label>見積内容</label>
    <length>100</length>
    <type>Text</type>
</CustomField>