force-app/main/default/objects/EstimateLog__c/fields/Field1__c.field-meta.xml
<CustomField>
    <fullName>Field1__c</fullName>
    <formula>IF(
RecordType.Name &lt;&gt; &quot;CS計画&quot;,
1,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>見積実績件数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>