force-app/main/default/objects/EstimateLog__c/fields/Field2__c.field-meta.xml
<CustomField>
    <fullName>Field2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>自動作成レコード</label>
    <type>Checkbox</type>
</CustomField>