force-app/main/default/objects/EstimateLog__c/fields/GrossProfitAmount__c.field-meta.xml
<CustomField>
    <fullName>GrossProfitAmount__c</fullName>
    <formula>ROUND( orderamount__c  *  saiyouarariritsu__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>採用粗利額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>