force-app/main/default/objects/EstimateLog__c/fields/KPI__c.field-meta.xml
<CustomField>
    <fullName>KPI__c</fullName>
    <formula>IF(
    RecordType.Name &lt;&gt; &quot;CS計画&quot;,
    DATEVALUE(CreatedDate),
    target_month__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KPI用日付</label>
    <type>Date</type>
</CustomField>