force-app/main/default/objects/EstimateLog__c/fields/memo__c.field-meta.xml
<CustomField>
    <fullName>memo__c</fullName>
    <label>備考</label>
    <length>100</length>
    <type>Text</type>
</CustomField>