force-app/main/default/objects/EstimateLog__c/fields/mitsumoririekiritsu__c.field-meta.xml
<CustomField>
    <fullName>mitsumoririekiritsu__c</fullName>
    <label>見積利益率</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>