force-app/main/default/objects/EstimateLog__c/fields/Oppestimate__c.field-meta.xml
<CustomField>
    <fullName>Oppestimate__c</fullName>
    <label>商談</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>見積履歴</relationshipLabel>
    <relationshipName>Oppestimate</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>