force-app/main/default/objects/EstimateLog__c/fields/orderamount__c.field-meta.xml
<CustomField>
    <fullName>orderamount__c</fullName>
    <label>採用金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>