force-app/main/default/objects/EstimateLog__c/fields/plusoneestimate__c.field-meta.xml
<CustomField>
    <fullName>plusoneestimate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>プラスワン見積</label>
    <type>Checkbox</type>
</CustomField>