force-app/main/default/objects/EstimateLog__c/fields/saiyouarariritsu__c.field-meta.xml
<CustomField>
    <fullName>saiyouarariritsu__c</fullName>
    <label>採用粗利率</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>