force-app/main/default/objects/EstimateLog__c/fields/target_month__c.field-meta.xml
<CustomField>
    <fullName>target_month__c</fullName>
    <label>目標月</label>
    <type>Date</type>
</CustomField>