force-app/main/default/objects/EstimateLog__c/fields/Target_Quote_Amount__c.field-meta.xml
<CustomField>
    <fullName>Target_Quote_Amount__c</fullName>
    <label>目標見積金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>