force-app/main/default/objects/EstimateLog__c/fields/Target_Quote_Count__c.field-meta.xml
<CustomField>
    <fullName>Target_Quote_Count__c</fullName>
    <label>目標見積件数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>