force-app/main/default/objects/EstimateLog__c/recordTypes/cs_plan.recordType-meta.xml
<RecordType>
    <fullName>cs_plan</fullName>
    <active>true</active>
    <label>CS計画</label>
</RecordType>